# flogger

./: .bazelrc  .gitignore  .travis.yml  AUTHORS  BUILD  CONTRIBUTING.md  MODULE.bazel  README-and-index.md.oss  README.md  WORKSPACE  _config.yml  anatomy.md  benefits.md  best_practice.md
.github/: dependabot.yml
.github/workflows/: ci.yml
_includes/: head.html
api/: BUILD  build_defs.bzl  proguard.cfg
api/platformprovider/main/java/com/google/common/flogger/backend/: PlatformProviderGenerator.java
api/src/main/java/com/google/common/flogger/: AbstractAggregatedLogger.java  AbstractLogger.java  AbstractMessageLogger.java  AggregatedLogContext.java  AggregatedLoggingApi.java  CountingRateLimiter.java  DefaultLogData.java  DurationRateLimiter.java  EventAggregator.java  FluentAggregatedLogger.java  FluentLogger.java  LazyArg.java  LazyArgs.java  LogContext.java  LogFormat.java  LogPerBucketingStrategy.java  LogSite.java  LogSiteKey.java  LogSiteMap.java  LogSiteStackTrace.java  LogSiteStats.java  LogSites.java  LoggerConfig.java  LoggingApi.java  LoggingScope.java  LoggingScopeProvider.java  MetadataKey.java  MutableMetadata.java  RateLimitStatus.java  SamplingRateLimiter.java  SpecializedLogSiteKey.java  StackBasedLogSite.java  StackSize.java  StatAggregator.java  package-info.java
api/src/main/java/com/google/common/flogger/backend/: BaseMessageFormatter.java  FormatChar.java  FormatOptions.java  FormatType.java  KeyValueFormatter.java  KeyValueHandler.java  LogData.java  LogMessageFormatter.java  LogSiteFormatter.java  LogSiteFormatters.java  LoggerBackend.java  LoggingException.java  MessageUtils.java  Metadata.java  (+9 more)
api/src/test/java/com/google/common/flogger/: AbstractLoggerTest.java  AggregatedLogContextTest.java  CountingRateLimiterTest.java  DurationRateLimiterTest.java  EventAggregatorTest.java  FluentAggregatedLoggerTest.java  FluentLoggerTest.java  LogContextTest.java  LogPerBucketingStrategyTest.java  LogSiteMapTest.java  LogSiteStackTraceTest.java  LogSiteStatsTest.java  LogSiteTest.java  LogSitesTest.java  LoggerConfigTest.java  LoggingScopeTest.java  MetadataKeyTest.java  RateLimitStatusTest.java  SamplingRateLimiterTest.java  SpecializedLogSiteKeyTest.java  StackBasedLogSiteTest.java  StatAggregatorTest.java
docs/: .gitignore  _config.yml  benefits.md  best_practice.md  index.md
google/: BUILD
google/src/main/java/com/google/common/flogger/: GoogleLogContext.java  GoogleLogger.java  GoogleLoggingApi.java
google/src/test/java/com/google/common/flogger/: GoogleLoggerTest.java  PackageSanityTest.java
grpc/: BUILD
log4j/: BUILD
log4j2/: BUILD
release/: deploy-to-maven-central.sh  execute-deploy.sh
slf4j/: BUILD
tools/: BUILD  maven.bzl  pom-template.xml
(+151 files in other folders)
