# Copyright (C) 2024 The Flogger Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "google_bazel_common")
git_override(
    module_name = "google_bazel_common",
    commit = "692efe797f25b180a30354a4f1289b7c08d7fa86",
    remote = "https://github.com/google/bazel-common",
)
